mdapipkg/objects/Payment_Term__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Charge__c</fullName>
        <label>Additional Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Terms</relationshipLabel>
        <relationshipName>Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Payment Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factory</label>
        <referenceTo>Factory__c</referenceTo>
        <relationshipLabel>Payment Terms</relationshipLabel>
        <relationshipName>Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>14 days from invoice date</fullName>
                </value>
                <value>
                    <fullName>30 Days After Invoice</fullName>
                </value>
                <value>
                    <fullName>TT 5 Days After End Of Month</fullName>
                </value>
                <value>
                    <fullName>100 Days From BL Date</fullName>
                </value>
                <value>
                    <fullName>120 Days From BL Date</fullName>
                </value>
                <value>
                    <fullName>123 Days from  BL Date</fullName>
                </value>
                <value>
                    <fullName>120 Day BL Date via DB RF Line</fullName>
                </value>
                <value>
                    <fullName>150 Days From BL Date</fullName>
                </value>
                <value>
                    <fullName>30 Days from Presentation Date</fullName>
                </value>
                <value>
                    <fullName>30 Days from Date We Present Documents</fullName>
                </value>
                <value>
                    <fullName>30 Days Prepayment before Shipment</fullName>
                </value>
                <value>
                    <fullName>TT 45 Days After End Of Month</fullName>
                </value>
                <value>
                    <fullName>TT 60 Days After End Of Month</fullName>
                </value>
                <value>
                    <fullName>90 Days EOM upon Shipment</fullName>
                </value>
                <value>
                    <fullName>120 Days Aft Arrival Of Vessel</fullName>
                </value>
                <value>
                    <fullName>30 Days After Arrival</fullName>
                </value>
                <value>
                    <fullName>30% against documents, Balance on Arrival</fullName>
                </value>
                <value>
                    <fullName>30% Against presentation of Orig Doc; Bal on Arriv</fullName>
                </value>
                <value>
                    <fullName>50% in Advance; Bal 50% against faxed documents</fullName>
                </value>
                <value>
                    <fullName>100% Prepayment 1 Week before Shipment</fullName>
                </value>
                <value>
                    <fullName>70% in Advance Against Faxed Copy Doc,30% Aft GR</fullName>
                </value>
                <value>
                    <fullName>100% Pre-payment prompt after contract date</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>55% Faxed Copy and Balance is Aftr DRC Determ.</fullName>
                </value>
                <value>
                    <fullName>Setoff settlement against ....</fullName>
                </value>
                <value>
                    <fullName>Advance Payment  (TT in Advance)</fullName>
                </value>
                <value>
                    <fullName>50% Upon Faxed Copy of BL</fullName>
                </value>
                <value>
                    <fullName>TT faxed copy of shipping doc(7 days from BL Date)</fullName>
                </value>
                <value>
                    <fullName>30 days from BL Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Term</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Payment Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>